--- a/ch03-e8.tex
+++ b/ch03-e8.tex
@@ -181,7 +181,7 @@ For now, we will use the following path objective:
 \end{equation}
 In other worts, $\hat{f}_x(\pi)$
 gives a lower bound on the cost of executing
-path $p$.
+path $\pi$.
 If the path consists of a mix of evaluated and unevaluated edges,
 we could write this as:
 \begin{equation}
