--- a/fast-manip.tex
+++ b/fast-manip.tex
@@ -9,6 +9,8 @@
 % symbols
 \usepackage{amsmath} % assumes amsmath package installed
 \usepackage{amssymb} % for \square
+% non-italicized math subscripts
+\newcommand{\ms}[1]{\mbox{\scriptsize #1}}
 
 % from http://tex.stackexchange.com/a/5255
 \DeclareMathOperator*{\argmin}{arg\,min}
