--- a/figs/broadphase-multi.tex
+++ b/figs/broadphase-multi.tex
@@ -61,9 +61,9 @@
 \node[rectangle,fill=black!5,inner sep=3] at (3.75,-0.7) {?};
 
 \node[rectangle,fill=white,inner sep=1] at (0.5,-1.25)
-  {$x_{\mbox{\scriptsize test}}$};
+  {$q_{\mbox{\scriptsize test}}$};
 \node[rectangle,fill=white,inner sep=1] at (4.5,-1.25)
-  {$x_{\mbox{\scriptsize test}}$};
+  {$q_{\mbox{\scriptsize test}}$};
 
 \node[above right = -0.1cm of bp.north] {Y};
 \node[above right = -0.1cm of bp.east] {N};
