--- a/figs/broadphase-single.tex
+++ b/figs/broadphase-single.tex
@@ -47,7 +47,7 @@
 \draw[->] (ni.north) -- (7.0,-1.0);
 
 \node[rectangle,fill=white,inner sep=1] at (0.5,-1.25)
-  {$x_{\mbox{\scriptsize test}}$};
+  {$q_{\mbox{\scriptsize test}}$};
 
 \node[above right = -0.1cm of bp.north] {Y};
 \node[above right = -0.1cm of bp.east] {N};
