--- a/figs/figstar-a.tex
+++ b/figs/figstar-a.tex
@@ -39,9 +39,9 @@
 \node[circle,fill=black,inner sep=1.5] (p2) at (3.3,1.7) {};
 \node[circle,fill=black,inner sep=1.5] (p3) at (4.2,3) {};
 
-\node (p1lab) at (0.7,2.3) {$x_1$};
-\node (p2lab) at (3.5,0.7) {$x_2$};
-\node (p3lab) at (5.2,3.0) {$x_3$};
+\node (p1lab) at (0.7,2.3) {$q_1$};
+\node (p2lab) at (3.5,0.7) {$q_2$};
+\node (p3lab) at (5.2,3.0) {$q_3$};
 \draw[->] (p1lab) -- (p1);
 \draw[->] (p2lab) -- (p2);
 \draw[->] (p3lab) -- (p3);
