--- a/figs/example-2d-a.tex
+++ b/figs/example-2d-a.tex
@@ -12,7 +12,7 @@
 % robot (x1)
 \begin{scope}[shift={(0.6,0.55)}]
    \draw[black,fill=blue!30] (0.0,-0.35) rectangle (0.8,0.35);
-   \node at (0.4,0) {$x_1$};
+   \node at (0.4,0) {$q_1$};
    \draw[black,fill=blue!30,shift={(-0.5,0.0)}]
       (-60:0.3) arc (-60:60:0.3) -- (60:0.5) arc (60:-60:0.5) -- cycle;
    %\draw[black,fill=red!40] (-0.5,0) circle (0.3);
@@ -40,6 +40,7 @@
    \draw[black,fill=blue!10,dashed,shift={(-0.5,0.0)}]
       (-60:0.3) arc (-60:60:0.3) -- (60:0.5) arc (60:-60:0.5) -- cycle;
    %\draw[black,fill=red!40] (-0.5,0) circle (0.3);
+   \node[fill=white,fill opacity=0.9] at (0.4,0) {$q \in X_{12}$};
 \end{scope}
 
 % label
