--- a/figs/example-2d-b.tex
+++ b/figs/example-2d-b.tex
@@ -21,7 +21,7 @@
 % robot (x2)
 \begin{scope}[shift={(4.8,0.55)},rotate=180]
    \draw[black,fill=blue!30] (0.0,-0.35) rectangle (0.8,0.35);
-   \node at (0.4,0) {$x_2$};
+   \node at (0.4,0) {$q_2$};
    \draw[black,fill=blue!30,shift={(-0.5,0.0)}]
       (-60:0.3) arc (-60:60:0.3) -- (60:0.5) arc (60:-60:0.5) -- cycle;
    \draw[black,fill=red!40] (-0.5,0) circle (0.3);
