--- a/figs/example-2d-e.tex
+++ b/figs/example-2d-e.tex
@@ -40,6 +40,7 @@
    \draw[black,fill=blue!30,shift={(-0.5,0.0)}]
       (-60:0.3) arc (-60:60:0.3) -- (60:0.5) arc (60:-60:0.5) -- cycle;
    %\draw[black,fill=red!40] (-0.5,0) circle (0.3);
+   \node[fill=white,fill opacity=0.9] at (0.4,0) {$q \in B$};
 \end{scope}
 
 % label
