--- a/figs/example-2d-g.tex
+++ b/figs/example-2d-g.tex
@@ -27,7 +27,7 @@
 % robot (x1)
 \begin{scope}[shift={(0.6,0.55)}]
    \draw[black,fill=blue!30] (0.0,-0.35) rectangle (0.8,0.35);
-   \node at (0.4,0) {$x_1$};
+   \node at (0.4,0) {$q_1$};
    \draw[black,fill=blue!30,shift={(-0.5,0.0)}]
       (-60:0.3) arc (-60:60:0.3) -- (60:0.5) arc (60:-60:0.5) -- cycle;
    %\draw[black,fill=red!40] (-0.5,0) circle (0.3);
@@ -36,7 +36,7 @@
 % robot (x2)
 \begin{scope}[shift={(4.8,0.55)},rotate=180]
    \draw[black,fill=blue!30] (0.0,-0.35) rectangle (0.8,0.35);
-   \node at (0.4,0) {$x_2$};
+   \node at (0.4,0) {$q_2$};
    \draw[black,fill=blue!30,shift={(-0.5,0.0)}]
       (-60:0.3) arc (-60:60:0.3) -- (60:0.5) arc (60:-60:0.5) -- cycle;
    \draw[black,fill=red!40] (-0.5,0) circle (0.3);
@@ -52,7 +52,7 @@
 
 % label
 \draw[fill=white] (0,1.5) rectangle (1.4,2);
-\node at (0.7,1.75) {$x_1 \rightarrow x_2$};
+\node at (0.7,1.75) {$q_1 \rightarrow q_2$};
 
 %\draw plot [smooth] coordinates {
 %  (0.9,0.55) (1.8,0.6) (2.4,0.9) (2.6,1.2) (2.7,1.4)};
